--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -8,15 +8,9 @@
   $menu-blue: #101622;
   $item-blue: #314e70;
   $blue: #2d4b67;
-  $gold: #d9a978;
+  $gold: #93c967;
 
   ion-content {
-  	.body {
-    	min-height:100%;
-  		background:linear-gradient(0deg,rgba(20,28,47,.8),rgba(20,28,47,.9)),url('../../assets/img/bg-img-sm.png');
-  		background-size:cover;
-  		width: 100%;
-  	}
 
   	.btn {
   		border-radius: 40px;
@@ -64,6 +58,9 @@
 
   		.field {
   			border-bottom: 1px solid $gold;
+        border-top: none;
+        border-right: none;
+        border-left: none;
   		}
   	}
 	    
@@ -73,7 +70,7 @@
 
 			.logo {
 				margin-top: 20px;
-				width: 140px;
+				width: 70px;
 			}
 
 			.label {
