--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -19,7 +19,8 @@
       <!-- <ion-label>Home</ion-label> -->
     </ion-tab-button>
 
-    <ion-tab-button tab="inbox">
+    <ion-tab-button tab="inbox" id="notification-button" (click)="clearNoti()"> 
+      <span *ngIf="count" id="notifications-badge" color="danger">{{count}}</span> 
       <ion-icon name="notifications"></ion-icon>
       <ion-label>Inbox</ion-label>
     </ion-tab-button>
