--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -31,27 +31,49 @@
 		}
 		
 		ion-tab-button {
-			background: $menu-blue;
+			background: #93c967;
 			// z-index: 1 !important;
 
 			ion-icon {
-				color: $item-blue;
+				color: #fff;
 			}
 
 			ion-label {
-				color: $item-blue;
+				color: #fff;
 			}
 
 			.home-btn {
-				color: $brown;
-				background: $gold;
-				border: 4px solid $gold;
+				color: #93c967;
+				background: #fff;
+				border: 4px solid #fff;
 				// font-size: 21pt;
 				border-radius: 50%;
 				padding: 5px;
 				margin-top: -5px;
 			}
 		}
+	}
+
+	#notification-button {            
+		position: relative;
+		width: 42px;
+		top:1px;
+		right: 1px;
+		overflow: visible!important;
+	}
+
+
+	#notifications-badge {
+		background-color: red;
+		color: #fff !important;
+		width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 175%;
+    position: absolute;
+    top: 3px;
+    right: 6px;
+		border-radius: 100%;
 	}
 
 }
