--- a/src/app/job/job.page.html
+++ b/src/app/job/job.page.html
@@ -33,15 +33,16 @@
 
     <ion-list lines="none">
       <ion-item *ngIf="jobs.length==0">No Job Found</ion-item>
-      <ion-item *ngFor="let job of jobs" (click)="tapJob(job)" detail="false">
+      <ion-item *ngFor="let job of jobs" detail="false" (click)="presentActionSheet(job)">
         <ion-icon slot="start" name="{{job.form.option.icon}}" class="with-border"></ion-icon>
         <ion-label text-wrap>
           <strong>{{job.form.option.name}}</strong><br>
           <span class="info">{{job.status}}</span><br>
           <span class="info">{{job.schedule_date}} {{job.schedule_time}}</span>
         </ion-label>
+        <!-- <ion-icon slot="end" name="chatbubbles" class="arrow" (click)="tapJob(job)">Chat</ion-icon>
+        <ion-icon slot="end" name="arrow-dropright-circle" class="arrow" (click)="tapJob(job)"></ion-icon> -->
         
-        <ion-icon slot="end" name="arrow-dropright-circle" class="arrow"></ion-icon>
       </ion-item>  
     </ion-list>
 </ion-content>
