--- a/src/app/resendemail/resendemail.page.scss
+++ b/src/app/resendemail/resendemail.page.scss
@@ -8,15 +8,9 @@
   $menu-blue: #101622;
   $item-blue: #314e70;
   $blue: #2d4b67;
-  $gold: #d9a978;
+  $gold: #93c967;
 
   ion-content {
-    .body {
-      min-height:100%;
-      background:linear-gradient(0deg,rgba(20,28,47,.8),rgba(20,28,47,.9)),url('../../assets/img/bg-img-sm.png');
-      background-size:cover;
-      width: 100%;
-    }
 
     .btn {
       border-radius: 40px;
@@ -33,6 +27,13 @@
       color: $brown;
     }
 
+    .forget-pass {
+      color: #fff;
+      padding: 10px 25px;
+      text-align: right;
+      margin-top: 20px;
+    }
+
     .custom-loader-class {
       --background: none;
     }
@@ -41,6 +42,9 @@
       background: none;
       border: 2px solid $gold;
       color: #eee;
+    }
+    .no-margin-top {
+      margin-top: -10px;
     }
 
     .form-field {
@@ -63,7 +67,7 @@
 
       .logo {
         margin-top: 20px;
-        width: 140px;
+        width: 70px;
       }
 
       .label {
