--- a/src/app/form/form.page.html
+++ b/src/app/form/form.page.html
@@ -38,7 +38,7 @@
     </ion-row>
 
     <button class="btn btn-login" (click)="tapNext()" >SAVE</button>
-    <button *ngIf="this.optionExist" class="btn btn-signup" (click)="tapRemove()" >DELETE</button>
+    <!-- <button *ngIf="this.optionExist" class="btn btn-signup" (click)="tapRemove()" >DELETE</button> -->
 
   </ion-list>
     
