--- a/src/app/option/option.page.html
+++ b/src/app/option/option.page.html
@@ -31,7 +31,7 @@
         <ion-label text-wrap>
           <strong>{{option.name}}</strong><br>
           <span class="info" *ngIf="option.description != null">{{option.description}}<br></span>
-          <span class="info" *ngIf="option.enable_quote == 'Yes'">For Quotation</span>
+          <span class="info" *ngIf="option.enable_quote == 'Yes'">For Quotation<br></span>
         </ion-label>
         <ion-icon *ngIf="option.form !== null" slot="end" name="add-circle" class="arrow"></ion-icon>
       </ion-item> 
