--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -296,7 +296,7 @@ ion-item {
   &__circle {
     width: 15px;
     height: 15px;
-    border: 3px solid $gold;
+    border: 3px solid #1486a0;
     border-radius: 50%;
     display: flex;
     align-items: center; 
@@ -312,16 +312,16 @@ ion-item {
   &__bar {
     flex: 1;
     height: 4px;
-    background: $gold;
+    background: #1486a0;
   }
   
   &--done {
-    background: $gold;
+    background: #93c967;
   }
   
   &--active {
-    border: 3px solid $gold;
-    color: $item-blue;
+    border: 3px solid #1486a0;
+    color: #1486a0;
   }
 }
 
