--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -233,8 +233,8 @@
 		    </div>
 
 		    <ion-row class="field-warp with-margin-top">
-			        <ion-label><ion-icon name="mail" class="icon"></ion-icon></ion-label>
-			        <ion-input type="email" formControlName="email" placeholder="Email" class="field"></ion-input>
+		        <ion-label><ion-icon name="mail" class="icon"></ion-icon></ion-label>
+		        <ion-input type="email" formControlName="email" placeholder="Email" class="field"></ion-input>
 			  </ion-row>
 			  <div class="validation-errors">
 		      <ng-container *ngFor="let validation of validation_messages.email">
@@ -275,7 +275,10 @@
 		        </div>
 		      </ng-container>
 		    </div>
-		    <ion-row class="field-warp with-margin-top" >
+		    <ion-row class="field-warp with-margin-top terms">
+		        By signing up, you agree to our <span (click)="terms();"> Terms </span> & <span (click)="privacy();"> Privacy Policy </span>
+			  </ion-row>
+		    <!-- <ion-row class="field-warp with-margin-top" >
 		      <ion-checkbox color="primary" formControlName="terms"></ion-checkbox> <ion-label color="primary"> &nbsp; <span (click)="terms();">I accept terms and conditions</span></ion-label>
 		    </ion-row>
 		    <div class="validation-errors">
@@ -284,7 +287,7 @@
 		          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
 		        </div>
 		      </ng-container>
-		    </div>
+		    </div> -->
 		  </div>   	      
 	      <ion-row>
 	        <ion-col class="signup-col">
