--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -86,6 +86,16 @@
       
   } 
 
+  .terms {
+    color: #eee;
+    text-align: center !important;
+    margin-top: 20px;
+    span {
+      color: #fff;
+      margin: 0 5px
+    }
+  }
+
   }
 
 }
