--- a/src/app/direction/direction.page.html
+++ b/src/app/direction/direction.page.html
@@ -10,6 +10,12 @@
 </ion-header>
 
 <ion-content>
+  <!-- <ion-list *ngIf="!coorFound">
+    <ion-list-header>
+      Locating your coordinates.<br> Make sure you turn on your location. <br>Please wait...
+    </ion-list-header>
+  </ion-list> -->
+  
 	<ion-card>
 		<ion-card-content>
 			<div #directionsPanel></div>
