--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -29,8 +29,8 @@
         <img src="{{provider.photo}}">
       </ion-avatar>
       <ion-label class="ion-text-wrap">
-        <p *ngIf="msg.from=='provider'" class="text-right">{{msg.chat}}</p>
-        <p *ngIf="msg.from=='client'">{{msg.chat}}</p>
+        <p *ngIf="msg.from=='provider'" class="text-right">{{msg.chat}}<br><span class="msg-time">{{msg.created_at}}</span></p>
+        <p *ngIf="msg.from=='client'">{{msg.chat}}<br><span class="msg-time">{{msg.created_at}}</span></p>
       </ion-label>
     </ion-item>
   </ion-list>
