--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -24,6 +24,10 @@
 	        <ion-col class="signup-col">
 	          <button class="btn btn-login">LOGIN</button>
 	          <button class="btn btn-signup" routerLink="/register" routerDirection="root" >SIGN UP</button>
+	          <div class="wrap-login-via">
+	          	<!-- <img src="../../assets/img/google-logo.png" class="login-via" (click)="google()"> -->
+	          	<!-- <img src="../../assets/img/fb-logo.png" class="login-via" (click)="facebook()"> -->
+	          </div>
 	          <div class="forget-pass" routerLink="/loginreset">Forget Password</div>
 	        </ion-col>
 	      </ion-row>
