--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,7 +11,15 @@
   $gold: #93c967;
 
   ion-content {
-
+    .wrap-login-via {
+      text-align: center;
+    }
+    .login-via {
+      width: 30px;
+      height: 30px;
+      margin: 10px;
+      margin-bottom:0px;
+    }
   	.btn {
   		border-radius: 40px;
   		display: block;
