--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -25,7 +25,7 @@
       <ion-label>Inbox</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="help">
+    <ion-tab-button tab="quotation">
       <ion-icon name="help-circle"></ion-icon> 
       <ion-label>Help</ion-label>
     </ion-tab-button>
