address set to not required

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -120,6 +120,38 @@
 			  </ion-row>
 
 			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	<ion-input formControlName="street" placeholder="Street" class="field"></ion-input></ion-col>
+			  </ion-row>
+
+			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	<ion-input formControlName="barangay" placeholder="Barangay" class="field"></ion-input></ion-col>
+			  </ion-row>
+
+			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	<ion-input formControlName="city" placeholder="City/Municipality" class="field"></ion-input></ion-col>
+			  </ion-row>
+
+			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	<ion-input formControlName="province" placeholder="Province" class="field"></ion-input></ion-col>
+			  </ion-row>
+
+			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	<ion-input formControlName="country" placeholder="Country" class="field"></ion-input></ion-col>
+			  </ion-row>
+
+			  <ion-row class="field-warp">
+	        <ion-label><ion-icon class="icon"></ion-icon></ion-label>
+	        <ion-col>	
+	        	<ion-input placeholder="Zip" class="field"></ion-input>
+	        </ion-col>	
+			  </ion-row>
+
+			  <!-- <ion-row class="field-warp">
 			        <ion-label><ion-icon name="pin" class="icon"></ion-icon></ion-label>
 			        <ion-col>	<ion-input formControlName="street" placeholder="Street" class="field"></ion-input></ion-col>
 			  </ion-row>
@@ -230,7 +262,7 @@
 		          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
 		        </div>
 		      </ng-container>
-		    </div>
+		    </div> -->
 
 		    <ion-row class="field-warp with-margin-top">
 		        <ion-label><ion-icon name="mail" class="icon"></ion-icon></ion-label>
